static/css/base.css
/* ... */
.btn-cta a {
    color: #fff;
    letter-spacing: 1.1px;
}

.btn-cta:hover {
    box-shadow: rgba(0, 0, 0, 0.2) 0 4px 12px;
    color: #fff;
}

/*=============== Reason Why Banner ===============*/
.reasons-why-banner {
    width: 100%;
    height: 4rem;
    color: #fff;
    letter-spacing: 1.1px;
}

/*=============== Category Callout ===============*/
.category-callout {
    width: 100%;
    height: 60vh;
}

.category-callout1 {
    background: url("/media/homepage-images/wms-bike.webp") no-repeat;
    background-size: cover;
    width: 100%;
    object-fit: cover;
    object-position: 100% 0;
}

.category-callout2 {
    background: url("/media/homepage-images/sale.webp") no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;
    object-fit: cover;
    object-position: 100% 0;
}

.category-callout1 p,
.category-callout2 p {
    font-size: 1.5rem;
    letter-spacing: 1.1px;
    padding-top: 1rem;
    color: #fff;
    width: fit-content;
    background-color: #cd4c1d;
    clip-path: polygon(10% 0%, 100% 0%, 90% 100%, 0% 100%);
}

/*=============== Top Products ===============*/
.liner {
    display: flex;
    align-items: flex-start;
    text-align: left;
}

.liner:after {
    content: "";
    flex-grow: 1;
    height: 1px;
    background: #000000;
    min-width: 20px;
    margin: auto;
}

/*=============== Footer ===============*/
footer {
    background-color: #dfdfdf;
}

footer h3 {
    text-decoration: underline;
    text-decoration-color: #cd4c1d;
    text-underline-offset: 0.5rem;
    font-size: 1.2rem;
}

footer ul {
    list-style-type: none;
    padding-left: 0.5rem;
}

#mc_embed_signup {
    clear: left;
    font: 14px 'Roboto', sans-serif;
}

#mc_embed_signup .helper_text {
    background-color: transparent !important;
}

#mc_embed_signup .mc-field-group {
    padding-bottom: 0% !important;
    display: flex !important;
    align-items: center;
    flex-wrap: wrap;
}

#mce-EMAIL {
    border: 1px solid #cd4c1e !important;
    border-radius: 0 !important;
    height: 40px;
    width: 300px;
    padding: 0 1rem;
    color: #000;
    background-color: transparent;
}

#mc-embedded-subscribe {
    height: 40px;
    padding: .5em 1em !important;
    background-color: #cd4c1e;
    color: #fff;
    letter-spacing: 1.1px;
    cursor: pointer;
    border: 1px solid #cd4c1e !important;
    transition: background-color .3s ease-in-out;
    margin: 0 !important;
}

#mc-embedded-subscribe:hover {
    background-color: #c73f0e;
}


#mc_embed_signup .mc-field-group #mce-EMAIL {
    width: 300px;
}

#mc_embed_signup .mc-field-group #mce-EMAIL:focus,
#mc_embed_signup .mc-field-group #mce-EMAIL:focus-visible {
    border: #c73f0e !important;
}

#mc_embed_signup .mc-field-group #mc-embedded-subscribe {
    width: auto;
}

#mc_embed_signup div.response,
#mc_embed_signup div#mce-responses {
    margin: 0 !important;
    padding: 0 !important;
}

#mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {
    background-color: transparent !important;
    color: #cd4c1e !important;
}

#mc_embed_signup form {
    margin-left: 0 !important;
    margin-right: 0 !important;
}

.optionalParent {
    width: 10rem;
}

.social-icon {
    font-size: 2rem;
    color: #cd4c1e;
    transition: color 0.3s ease;
}

.social-icon:hover {
    color: #000;
    transform: scale(1.2);
}

/*=============== Product List ===============*/
.product-content {
    height: 100%;
    width: 100%;
}

.product-card {
    width: 100%;
    text-align: center;
    position: relative;
}

.sale-badge {
    position: absolute;
    top: -16px;
    left: -12px;
    background-color: #cd4c1e;
    color: white;
    padding: 7px;
    font-size: 12px;
    clip-path: polygon(15% 0%, 100% 0%, 85% 100%, 0% 100%);
}

.product-img {
    width: 100%;
    height: 100%;
    margin-bottom: 15px;
    object-fit: scale-down;
    object-position: center;
}

.product-image-container {
    width: 100%;
    height: 100px;
}

.product-title {
    font-size: 1rem;
}

.product-title a {
    color: #000;
}

.price {
    font-size: 1rem;
    font-weight: bold;
    letter-spacing: .5px;
}

.product-sale-price {
    color: #cd4c1d;
}

.strike-price {
    text-decoration: line-through;
}

.btn-shop-now {
    transition: all .4s ease;
    white-space: nowrap;
    border-radius: 0;
    color: #fff;
    letter-spacing: 1.1px;
    text-transform: uppercase;
    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
}

.btn-shop-now:hover {
    color: #fff;
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

.add-wishlist {
    width: 40px;
    height: 40px;
    line-height: 40px;
    text-align: center;
    font-size: 24px;
    color: #cd4c1d;
    z-index: 9;
    transition: all 0.3s linear;
    position: absolute;
    top: -5px;
    right: 0;
}

.add-wishlist.disabled {
    pointer-events: none;
    cursor: default;
}

.add-wishlist.disabled:hover {
    color: #cd4c1d;
    font-size: auto;
    transition: none;
}

.add-wishlist:hover,
.add-wishlist:active {
    color: #cd4c1d;
    font-size: calc(.8vw + .8vh + .8vmin);
    transition: all 0.3s ease;
}

.btn-icon {
    padding: 0;
}

.product-container {
    position: relative;
    border: 1px solid #eaeaea;
    transition: border-color .3s;
    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
}

#error-container-bag {
    display: none;
    background-color: #ffcccc;
    color: #cc0000;
    padding: 10px;
    border: 1px solid #cc0000;
    margin-bottom: 10px;
}

/*=============== Toast Messages ===============*/
.message-container {
    position: fixed;
    top: 60px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast {
    width: auto;
    max-width: 320px;
    background-color: #ebedef;
    color: #40464f;
    border-color: #cd4c1d;
}
/* ... */

